<resources>
    <string name="app_name">Restaurant</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">menu1</string>
    <string name="nav_item_friends">menu2</string>
    <string name="nav_item_notifications">menu3</string>

    <string-array name="nav_drawer_labels">

    </string-array>


    <string name="galary">Gallery</string>
    <string name="menu">Menu</string>
    <string name="oder_now">Oder Now</string>
    <string name="contact_us">Contact Us</string>
    <string name="offer_now">Offer Now</string>
    <string name="about_us">About us</string>

    <string name="home">Home</string>

</resources>
