<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:background="@drawable/home"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:local="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="-50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="6">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">

                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                     />
              <TextView
                  android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                  android:layout_above="@+id/indicator"
                  android:gravity="center"
                  android:background="#88BE8454"
                  android:textColor="@android:color/white"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:id="@+id/tvPageTitle">
                  </TextView>
                <com.rakshith.restaurant.ViewPageIndicator.CirclePageIndicator
                    android:id="@+id/indicator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"

                    android:padding="10dip" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:weightSum="2"
                android:layout_weight="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/btGalary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/button_rounded_corner"
                        android:text="@string/galary"/>
                    <Button
                        android:id="@+id/btmenu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_rounded_corner"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="@string/menu"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/button_rounded_corner"
                        android:layout_weight="1"
                        android:text="@string/oder_now"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:weightSum="3">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/button_rounded_corner"
                        android:layout_weight="1"
                        android:text="@string/contact_us"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/button_rounded_corner"
                        android:layout_weight="1"
                        android:text="@string/offer_now"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/button_rounded_corner"
                        android:layout_weight="1"
                        android:text="@string/about_us"/>

                </LinearLayout>

            </LinearLayout>




           </LinearLayout>


    </LinearLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="com.rakshith.restaurant.side_menu.FragmentDrawer"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>